# voxelworld

./: .gitignore  CMakeLists.txt  ENGINE.md  ENGINE_ARCHITECTURE.md  ENGINE_STRUCTURE.md  README.md  VOXEL_ENGINE_ARCHITECTURE.md  VOXEL_ENGINE_DESIGN_SUMMARY.md  WORLD.md  color_palette.html  test_window.cpp
.cache/clangd/index/: buffer.cpp.65DB79E26FA4442D.idx  buffer.h.C26035B5F7C48066.idx  camera.cpp.F0522C4AB081FA3D.idx  camera.h.AF70431A36E5F14D.idx  camera_controller.cpp.A381AB05C796EFEF.idx  camera_controller.h.ED721C3ED3A0F4FA.idx  engine.cpp.28421746BFEFC026.idx  engine.h.79F1A2FEAA09FC76.idx  events.cpp.179581EB451860C4.idx  events.h.4A94D0BB192397CE.idx  game_logic.cpp.AA72722A435FEF8F.idx  game_logic.h.4BD409C3DCC8EA0E.idx  input.h.D7465EF42D9B7E95.idx  main.cpp.8D9C48C916107B3A.idx  math_utils.cpp.DBC02C7F25C27B27.idx  math_utils.h.FA2179DCBB5FD569.idx  mesh.cpp.0EF3BEEA853DBFE7.idx  mesh.h.7895E5DBE25BFACB.idx  model.cpp.DAEA83A597F0A73C.idx  model.h.9AA79CA8A20B1B79.idx  renderer.cpp.32A02771A003EEC2.idx  renderer.h.1A13C60F3014E203.idx  shader.cpp.ADA990C4B2B9A8F0.idx  shader.h.8ABBEBA8714DC816.idx  test_window.cpp.2DB60D9EB4627A1E.idx  transform.cpp.1277BAD4A9C754A3.idx  transform.h.E6E209B6BEFED345.idx  types.h.ACE2C6E4619E22A3.idx  voxel.h.DF36355F9066AA67.idx  vulkan_context.cpp.90B2C494ED25179C.idx  vulkan_context.h.F73F317DD44FC59D.idx  window.cpp.D5073B533DDF4DDF.idx  window.h.B39EF6F6DBC4B28E.idx  world.cpp.216E4FDBFCBBC9B7.idx  world.h.CA6E277827A09652.idx
.cursor/rules/: cmake-project-style.mdc  cpp-class-naming-style.mdc  cpp-cxx20-standard.mdc  cpp-file-naming-style.mdc  cpp-function-formatting.mdc  cpp-include-order.mdc  cpp-math-library.mdc  cpp-types-aliases.mdc  markdown-linting.mdc  mermaid-diagrams.mdc
app/: CMakeLists.txt
app/src/: main.cpp
apps/: CMakeLists.txt
apps/test_window/: CMakeLists.txt  test_window.cpp
apps/voxel_app/: CMakeLists.txt  main.cpp
docs/: PRD.md
engine/: CMakeLists.txt
engine/include/: buffer.h  camera.h  engine.h  input.h  mesh.h  model.h  renderer.h  shader.h  types.h  voxel.h  vulkan_context.h  window.h  world.h
engine/include/voxel/: buffer.h  camera.h  camera_controller.h  engine.h  events.h  game_logic.h  input.h  math_utils.h  mesh.h  model.h  renderer.h  shader.h  transform.h  types.h  voxel.h  vulkan_context.h  window.h  world.h
engine/shaders/: compile.sh  voxel.frag  voxel.vert  voxel_frag.spv  voxel_vert.spv
engine/src/: buffer.cpp  camera.cpp  camera_controller.cpp  engine.cpp  events.cpp  game_logic.cpp  math_utils.cpp  mesh.cpp  model.cpp  renderer.cpp  shader.cpp  transform.cpp  vulkan_context.cpp  window.cpp  world.cpp
shaders/: voxel_vert.spv
